test CSS change

--- a/themes/rhino3d.com-theme/assets/scss/_override.scss
+++ b/themes/rhino3d.com-theme/assets/scss/_override.scss
@@ -107,7 +107,7 @@ d-topics-list iframe{
 
 /* for block of code */
 .hljs {
-	background-color: $codetab-background;
+	background-color: #eb8686;
 }
 
 .hljs-ln-code {
