--- a/themes/rhino3d.com-theme/layouts/shortcodes/currency.html
+++ b/themes/rhino3d.com-theme/layouts/shortcodes/currency.html
@@ -1,1 +1,1 @@
-{{- if eq (getenv "MCNEEL_REGION") "EMEA" -}}€{{- else -}}${{- end -}}
+{{- if eq (.Page.Params.MCNEEL_REGION | default (getenv "MCNEEL_REGION"| default "NAPA")) "EMEA" -}}€{{- else -}}${{- end -}}
