--- a/themes/rhino3d.com-theme/layouts/_default/list.html
+++ b/themes/rhino3d.com-theme/layouts/_default/list.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 <div class="single-content-area index-page">
-  <div class="main-content {{ if not .Params.page_options.toc }}toc-no{{ end }}">
+  <div class="main-content {{ if not .Params.page_options.toc }}toc-no{{ if .Params.page_options.narrow }} toc-no-narrow{{ end }}{{ end }}">
     {{ .Content }}
   </div>
   {{- if ne .Page.Params.page_options.taxonomy false -}}
