--- a/themes/rhino3d.com-theme/layouts/discontinued-products/single.html
+++ b/themes/rhino3d.com-theme/layouts/discontinued-products/single.html
@@ -7,7 +7,7 @@
   {{ if .Params.page_options.toc }}
       {{ partial "toc.html" . }}
   {{ end }}
-  <div class="main-content {{ if not .Params.page_options.toc }}toc-no{{ end }}">
+  <div class="main-content {{ if not .Params.page_options.toc }}toc-no{{ if .Params.page_options.narrow }} toc-no-narrow{{ end }}{{ end }}">
     {{ if ne false (.Params.page_options.show_title) }}
     <div class="feature-title-container">
       <div class="feature-title">{{ .Page.Title }}</div>{{ if eq (int .Site.Params.latestRhinoVersion) (int .Params.included_in.since) }}<div class="new-callout"><a href="/{{ .Site.Params.latestRhinoVersion}}/new">{{ i18n "NEW-in-Vx" . }}</a></div>{{ end }}{{- partial "platform-callout" . -}}        
