--- a/themes/rhino3d.com-theme/layouts/docs/help/commands/single.html
+++ b/themes/rhino3d.com-theme/layouts/docs/help/commands/single.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 <div class="single-content-area toc-page">
-  <div class="main-content {{ if not .Params.page_options.toc }}toc-no{{ end }}">
+    <div class="main-content {{ if not .Params.page_options.toc }}toc-no{{ if .Params.page_options.narrow }} toc-no-narrow{{ end }}{{ end }}">
     {{/* partial "breadcrumbs.html" . */}}
     <h1 style="border-bottom: 1px dashed #d0d0d0;">{{ .Page.Title }}</h1>    
     <table style="border-spacing: 20px 0; background-color:white;">
