--- a/themes/rhino3d.com-theme/layouts/docs/list.html
+++ b/themes/rhino3d.com-theme/layouts/docs/list.html
@@ -4,7 +4,7 @@
   {{ if .Params.page_options.toc }}
     {{ partial "toc.html" . }}
   {{ end }}
-  <div class="main-content {{ if not .Params.page_options.toc }}toc-no{{ end }}">
+  <div class="main-content {{ if not .Params.page_options.toc }}toc-no{{ if .Params.page_options.narrow }} toc-no-narrow{{ end }}{{ end }}">
     <div class="guide-grid-stack">
         <div>
           {{ .Content}}
