--- a/themes/rhino3d.com-theme/layouts/features/list.html
+++ b/themes/rhino3d.com-theme/layouts/features/list.html
@@ -3,7 +3,7 @@
   {{ if .Params.page_options.toc }}
     {{ partial "toc.html" . }}
   {{ end }}
-  <div class="main-content {{ if not .Params.page_options.toc }}toc-no{{ end }}">
+  <div class="main-content {{ if not .Params.page_options.toc }}toc-no{{ if .Params.page_options.narrow }} toc-no-narrow{{ end }}{{ end }}">
     <h1>{{ .Title }}</h1>
     {{ .Content }}
     {{ range .Site.Sections }}
