--- a/themes/rhino3d.com-theme/layouts/guides/single.html
+++ b/themes/rhino3d.com-theme/layouts/guides/single.html
@@ -3,7 +3,7 @@
   {{ if .Params.page_options.toc }}
     {{ partial "toc.html" . }}
   {{ end }}
-  <div class="main-content {{ if not .Params.page_options.toc }}toc-no{{ end }}">    
+  <div class="main-content {{ if not .Params.page_options.toc }}toc-no{{ if .Params.page_options.narrow }} toc-no-narrow{{ end }}{{ end }}">
     {{/* partial "breadcrumbs.html" . */}}    
     <h1>{{ .Page.Title }}</h1>    
     <p>{{ partial "byline.html" . }}</p>
