--- a/themes/rhino3d.com-theme/layouts/shortcodes/open-rhino.html
+++ b/themes/rhino3d.com-theme/layouts/shortcodes/open-rhino.html
@@ -14,4 +14,8 @@
   {{ $title = .Inner }}
 {{ end }}
 
+{{ if not (strings.HasPrefix $url "http") }}
+  {{ $url = printf "%s%s" .Page.Permalink $url }}
+{{ end }}
+
 <a class="rhinoProtocol" href="{{ $url }}" data-verb="{{ $verb }}"/>{{ $title | markdownify }}</a>
