More updates on the width using an overirde
WWW-2758 Dev Site SCSS is not updating on the server even though it changes locally.  Its a hack

--- a/themes/rhino3d.com-theme/assets/scss/_custom.scss
+++ b/themes/rhino3d.com-theme/assets/scss/_custom.scss
@@ -779,3 +779,13 @@ table.multiline-middle img{
 	stroke: #000;
 	shape-rendering: crispEdges;
   }
+
+  /*
+##############################################################################
+## Overload the learn grids
+##############################################################################
+*/
+
+  .learn-grid-width {
+	width: auto !important;
+}
