--- a/themes/rhino3d.com-theme/assets/scss/_page/_learn.scss
+++ b/themes/rhino3d.com-theme/assets/scss/_page/_learn.scss
@@ -154,7 +154,7 @@ div.learn_gallery_page {
 	grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
 	/* grid-template-columns: auto auto auto auto; */
 	align-items: start;
-	width: 100% !important;
+	width: auto !important;
 }
 
 .discover-grid-row {
