--- a/themes/rhino3d.com-theme/layouts/partials/gallery-cards.html
+++ b/themes/rhino3d.com-theme/layouts/partials/gallery-cards.html
@@ -1,4 +1,4 @@
-<div class="discover-grid">
+<div class="discover-grid learn-grid-width">
     {{ range .Pages }}
         {{ $Cpage := . }}
           <div class="discover-item card learn-card-override">
