--- a/layouts/shortcodes/dev-topic-list.html
+++ b/layouts/shortcodes/dev-topic-list.html
@@ -22,6 +22,9 @@
 {{- end -}}
 
 <ul>
+    <!-- This is a dirty hack to get the guides page to render correctly in localized versions
+     where the files are missing for that language...ideally, we wouldn't have to do this and should
+     find a better way -->
     {{- range where (where site.AllPages ".Lang" ($.Scratch.Get "fallbacklang")) "Section" ($.Scratch.Get "section") -}}
         {{- if in .Params.sdk ($.Scratch.Get "sdk") -}}
             {{- if or (and ( ge ($.Scratch.Get "version") .Params.Included_in.Since) ( or (not .Params.Included_in.Until) ( lt ($.Scratch.Get "version") .Params.Included_in.Until))) (not ($.Scratch.Get "version")) -}}
