rhino3d.com-theme sync

--- a/themes/rhino3d.com-theme/assets/scss/_override.scss
+++ b/themes/rhino3d.com-theme/assets/scss/_override.scss
@@ -256,3 +256,14 @@ td.hljs-ln-line.hljs-ln-code {
     font-size: 16pt !important;
   }
 }
+
+
+/* 
+####################################################################
+# Extra Learn Grid override for width Overrides
+####################################################################
+*/
+
+.grid-width {
+	width: auto;
+}
