--- a/themes/rhino3d.com-theme/layouts/shortcodes/column.html
+++ b/themes/rhino3d.com-theme/layouts/shortcodes/column.html
@@ -1,4 +1,3 @@
-
 <div class="column" {{- if .Get 0 -}}style="{{ .Get 0 }}"{{- end -}}>
-    {{ .Inner | markdownify }}
+    {{ .Inner | .Page.RenderString }}
 </div>
