--- a/themes/rhino3d.com-theme/layouts/shortcodes/left-selector-item.html
+++ b/themes/rhino3d.com-theme/layouts/shortcodes/left-selector-item.html
@@ -4,5 +4,5 @@
   header='{{ .Get "header" }}'
   cover='{{ .Get "cover" }}'
 >
-  {{ .Inner | markdownify }}
+  {{ .Inner | .Page.RenderString }}
 </div>
