--- a/themes/rhino3d.com-theme/layouts/shortcodes/mathjax.html
+++ b/themes/rhino3d.com-theme/layouts/shortcodes/mathjax.html
@@ -2,5 +2,5 @@
 {{ if or (in .Inner "array") (in .Inner "bmatrix") }}
     {{ .Inner }}    
 {{- else -}}
-    {{ .Inner | markdownify }}
+    {{ .Inner | .Page.RenderString }}
 {{- end -}}
