--- a/themes/rhino3d.com-theme/layouts/shortcodes/section-selector.html
+++ b/themes/rhino3d.com-theme/layouts/shortcodes/section-selector.html
@@ -17,5 +17,5 @@
   {{- $label = .Inner -}}
 {{- end -}}
 <span class='section-selector' data-section-group='{{- $group -}}' data-section-name='{{- $name -}}' data-section-behavior='{{- $behavior -}}'>
-    {{- $label | markdownify -}}
+    {{- $label | .Page.RenderString -}}
 </span>
