--- a/themes/rhino3d.com-theme/layouts/shortcodes/rhino-command.html
+++ b/themes/rhino3d.com-theme/layouts/shortcodes/rhino-command.html
@@ -20,7 +20,7 @@
 
 
 <a href="https://docs.mcneel.com/rhino/{{$version}}/help/{{.Site.Params.docLang}}/index.htm#commands/{{lower $englishCommand }}.htm" target="_blank">
-<span style="display: inline-block;">
+<span style="display: inline-block;" class="unfurl-link">
     <strong>
         <img style="
         margin-top: -4px;
@@ -32,5 +32,82 @@
         >
         {{ $localCommand }}
     </strong>
+
+    <script>
+        var parser = new DOMParser();
+        var href = "https://docs.mcneel.com/rhino/{{$version}}/help/{{.Site.Params.docLang}}/unfurl/{{lower $englishCommand }}.htm"
+        var scriptTag = document.getElementsByTagName('script');
+        scriptTag = scriptTag[scriptTag.length - 1];
+        var parentTag = scriptTag.parentNode;
+
+        function addPreviewDiv(parent){ 
+            const previewElement = document.createElement("span");
+            previewElement.classList.add("tooltip");
+            previewElement.classList.add("arrow-top");
+
+            const iframeElement = document.createElement("iframe");
+            iframeElement.src = href;
+            iframeElement.style.width = "100%";
+            iframeElement.style.height = "100%";
+            iframeElement.style.border = "none";
+            previewElement.appendChild(iframeElement);
+
+            parent.appendChild(previewElement)
+        }
+
+        addPreviewDiv(parentTag)
+
+    </script>
 </span>
 </a>
+
+
+<style>
+    .unfurl-link {
+        display:inline-block;
+        position:relative;
+        border-bottom:1px dotted #666;
+        text-align:left;
+    }
+    
+    .unfurl-link h3 {margin:12px 0;}
+    
+    .unfurl-link .tooltip {
+        width:max-content;
+        top:0px;
+        left:50%;
+        transform:translate(-50%, 0);
+        padding:10px;
+        color:#666666;
+        background-color:white;
+        font-weight:normal;
+        font-size:13px;
+        border-radius:8px;
+        position:absolute;
+        z-index:99999999;
+        box-sizing:border-box;
+        box-shadow:0 1px 50px rgba(0,0,0,0.5);
+        display:none;
+    }
+    
+    .unfurl-link:hover .tooltip {
+        display:block;
+    }
+    
+
+    .tooltip.arrow-top {
+        margin-top: 40px;
+    }
+      
+    .tooltip.arrow-top:after {
+        content: " ";
+        position: absolute;
+        left: inherit;
+        top: -15px;
+        border-top: none;
+        border-right: 15px solid transparent;
+        border-left: 15px solid transparent;
+        border-bottom: 15px solid white;
+      }
+    
+    </style>
