Sync rhino3d.com-theme

--- a/themes/rhino3d.com-theme/layouts/shortcodes/figure.html
+++ b/themes/rhino3d.com-theme/layouts/shortcodes/figure.html
@@ -8,7 +8,7 @@
     {{- if eq hugo.Environment "development" -}}
         {{- $thumbnail_url = ($thumb | relURL ) -}}
     {{- else -}}
-        {{- $thumbnail_url = (print .Site.Params.rhinoURLNewSource $thumb) -}}
+        {{- $thumbnail_url = (print .Site.Params.baseURLForFigures $thumb) -}}
     {{- end -}}
 {{- else if hasPrefix $thumb ".." -}}
     {{- $thumbnail_url = $thumb -}}
