--- a/themes/rhino3d.com-theme/layouts/shortcodes/image.html
+++ b/themes/rhino3d.com-theme/layouts/shortcodes/image.html
@@ -14,30 +14,17 @@
     {{ if .Get 1 }}{{ $class = .Get 1 }}{{ end }}
 {{ end }}
 
-{{- $image_url := "" -}}
-{{ if hasPrefix $url "/images/"}}
-    {{- if eq hugo.Environment "development" -}}
-        {{- $image_url = ($url | relURL ) -}}
-    {{- else -}}
-        {{- $image_url = (print .Site.Params.baseURLForFigures $url) -}}
-    {{- end -}}
-{{- else if hasPrefix $url ".." -}}
-    {{- $image_url = $url -}}
-{{- else if hasPrefix $url "http" -}}
-    {{- $image_url = $url -}}
+
+{{- $imageName := $url -}}
+{{- $.Scratch.Set "imageURL" "" }}
+
+{{- if or (hasPrefix $imageName "http://") (hasPrefix $imageName "https://") (hasPrefix $imageName "/") -}}
+    {{- $.Scratch.Set "imageURL" $imageName }}
 {{- else -}}
-    {{- $res := .Page.Resources.GetMatch ( printf "%s" $url) -}}
-    {{- if not $res -}}
-        {{- $defaultPage := .Site.GetPage (printf "%s/%s" .Page.Section .Page.File.TranslationBaseName) -}}
-        {{- if $defaultPage -}}
-            {{- $res = $defaultPage.Resources.GetMatch ( printf "%s" $url) -}}
-        {{- end -}}
-    {{- end -}}
-    {{- if $res -}}
-        {{- $image_url = $res.RelPermalink -}}
-    {{- else -}}
-        {{- $image_url = (print "/images/" $url) -}}
+    {{- $image := .Page.Resources.GetMatch $imageName -}} 
+    {{- if $image -}}
+        {{- $.Scratch.Set "imageURL" $image.RelPermalink }}
     {{- end -}}
 {{- end -}}
 
-<img src="{{ $image_url }}" alt="{{ $alt }}" class="{{ $class }}" width="{{ $width }}" height="{{ $height }}">
+<img src="{{ $.Scratch.Get "imageURL" }}" alt="{{ $alt }}" class="{{ $class }}" width="{{ $width }}" height="{{ $height }}">
